--- a/index.html
+++ b/index.html
@@ -5,10 +5,21 @@
     <title>Title</title>
 
     <link rel="stylesheet" href="styles.css" />
-    <script src="app.js"></script>
   </head>
 
   <body>
+    <div class="search-bar-container">
+      <input
+        type="text"
+        class="search-bar"
+        onkeyup="searchBar()"
+        placeholder="Search for names.."
+      />
+    </div>
+
+    <p class="loading">Table loading...</p>
+
     <table class="people-table"></table>
+    <script src="app.js"></script>
   </body>
 </html>
