--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>Title</title>
 
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="scss/styles.css" />
   </head>
 
   <body>
@@ -20,6 +20,6 @@
     <p class="loading">Table loading...</p>
 
     <table class="people-table"></table>
-    <script src="app.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
