feat: now can also search for locations

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
         onkeyup="searchBar()"
         placeholder="Search for names.."
       />
+
+      <input type="radio" id="name" name="search-for" value="Name" checked />
+      <label for="name">Name</label><br />
+      <input type="radio" id="location" name="search-for" value="Location" />
+      <label for="location">Location</label>
     </div>
 
     <p class="loading">Table loading...</p>
