feat: added a text if there are no records found

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       </div>
     </div>
 
+    <p class="no-records display">No records found for this search!</p>
     <p class="loading">Table loading...</p>
 
     <table class="people-table"></table>
