fix: add modifier to element, after dom loads

--- a/index.html
+++ b/index.html
@@ -38,15 +38,14 @@
     </div>
 
     <div class="status-message-container">
-      <p
-        class="status-message-container__no-records status-message-container--disabled"
-      >
+      <p class="status-message-container__no-records">
         No records found for this search!
       </p>
       <p class="status-message-container__loading">Table loading...</p>
     </div>
 
     <table class="people-table"></table>
+
     <script src="js/app.js"></script>
   </body>
 </html>
